# json-delta-py

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_identity.py  audit_log.py  data_sync.py  index_vs_keyed.py  keyed_arrays.py  state_transitions.py  undo_redo.py
src/json_delta/: __init__.py  _identity.py  _utils.py  apply.py  compare.py  diff.py  errors.py  invert.py  models.py  path.py  validate.py
tests/: conftest.py  test_apply.py  test_compare.py  test_conformance.py  test_cross_validation.py  test_diff.py  test_edge_cases.py  test_extensions.py  test_invert.py  test_json_patch.py  test_models.py  test_path.py  test_utils.py  test_validate.py
