[project]
name = "json-delta-py"
version = "0.1.0"
description = "Python implementation of the JSON Delta v0 specification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Christian Glessner" }]
keywords = ["json", "diff", "delta", "patch", "changeset", "jsonpath"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ltwlf/json-delta-py"
Repository = "https://github.com/ltwlf/json-delta-py"
Specification = "https://github.com/ltwlf/json-delta-format"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/json_delta"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "mypy>=1.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
disallow_untyped_defs = true
